<resources>
    <string name="app_name">LabOne</string>
    <string name="from_name">From</string>
    <string name="to_name">To</string>
    <string name="value_name">Value</string>
    <string name="button_name">CONVERT</string>
    <string name="result_name">Results</string>
    <string name="editText_name">Enter a Value</string>
    <string-array name="spinner_items">
        <item>EGP</item>
        <item>USD</item>
    </string-array>
</resources>
