<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.labone.MainActivity">


    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="39dp"
        android:text="@string/from_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/toTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fromTextView"
        android:layout_alignStart="@+id/fromTextView"
        android:layout_below="@+id/fromTextView"
        android:layout_marginTop="65dp"
        android:text="@string/to_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toTextView2"
        android:layout_alignStart="@+id/toTextView2"
        android:layout_below="@+id/toTextView2"
        android:layout_marginTop="76dp"
        android:text="@string/value_name"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/button_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/result_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/valueTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/editText_name"
        android:inputType="number|numberDecimal" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fromTextView"
        android:layout_alignLeft="@+id/enterValue"
        android:layout_alignStart="@+id/enterValue"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/valueTextView"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignStart="@+id/spinner1" />
</RelativeLayout>
